# DeGeM

./: .gitignore  CMakeLists.txt  README.md
res/: qml_resources.qrc
res/qml/: ExpenseItem.qml  app.qml
src/DeGeM/: ExpenseSummaryModel.cpp  ExpenseSummaryModel.h  SingleExpenseSummary.h  main.cpp
